# simcov

./: .clang-format  .gitignore  .gitmodules  CMakeDefinitions.txt  CMakeLists.txt  LICENSE.txt  README.md  SIMCoV-Hopper.md  build.sh  build_hopper.sh  covid.config  covid_ba.config  covid_branching_airways.config  covid_default.config  covid_default_small.config  covid_multisac.config  create_config.py  cycells.config  generate_paraview_state.py  run_exp.sh  run_p1.sh  sample-run.pvsm  sample_run.py  simforager_null.config  slurm_hopper.sh  small-test.config  wheeler_simcov_run.pbs  xena_simcov_run.sh
batch-scripts/carc/: wheeler_simcov_run.pbs  xena_simcov_run.sh
configs/: CT_scan_validation.config  README.md  sample-demo.config  small-test.config
configs/figure-2/: fig2.config
configs/figure-3/: FOI_16_1.config  FOI_1_1.config  FOI_1_16.config  FOI_1_16_13.config  FOI_1_16_14.config  FOI_1_16_15.config  FOI_1_16_19.config  FOI_1_16_24.config  FOI_1_16_25.config  FOI_1_16_27.config  FOI_1_16_29.config  FOI_1_16_3.config  FOI_1_16_6.config  FOI_1_16_7.config  FOI_4_1.config  FOI_4_4.config  FOI_4_4_1.config  FOI_4_4_11.config  FOI_4_4_12.config  FOI_4_4_13.config  FOI_4_4_15.config  FOI_4_4_16.config  FOI_4_4_18.config  FOI_4_4_19.config  FOI_4_4_22.config  FOI_4_4_23.config  FOI_4_4_29.config  FOI_4_4_3.config
configs/figure-4/: T-cell-delay-15-days.config  T-cell-delay-7-days.config  T-cell-generation-100k.config  T-cell-generation-200k.config  T-cell-generation-20k.config  T-cell-generation-500k.config
configs/figure-5/: FOI-1.0.config  FOI-1.2.config  FOI-1.4.config  FOI-16.3.config  FOI-16.4.config  FOI-2.0.config  FOI-2.4.config  FOI-32.0.config  FOI-4.1.config  FOI-64.2.config  FOI-64.3.config  FOI-64.4.config  FOI-8.0.config  FOI-8.4.config  chemokine-decay-0.005.2.config  chemokine-decay-0.005.4.config  chemokine-decay-0.005.6.config  chemokine-decay-0.005.7.config  chemokine-decay-0.0075.0.config  chemokine-decay-0.0075.1.config  chemokine-decay-0.0075.2.config  chemokine-decay-0.0075.5.config  chemokine-decay-0.0075.6.config  chemokine-decay-0.0075.8.config  chemokine-decay-0.01.0.config  chemokine-decay-0.01.1.config  chemokine-decay-0.01.4.config  chemokine-decay-0.015.0.config  chemokine-decay-0.015.1.config  chemokine-decay-0.015.2.config  chemokine-decay-0.015.3.config  chemokine-decay-0.015.5.config  chemokine-decay-0.015.6.config  chemokine-decay-0.015.7.config  chemokine-decay-0.015.8.config  chemokine-decay-0.02.0.config  chemokine-decay-0.02.1.config  chemokine-decay-0.02.2.config  chemokine-decay-0.02.4.config  chemokine-decay-0.02.5.config  (+230 more)
configs/figure-6/: Readme.md  patient-A.config  patient-E.config  patient-H.config
configs/figure-7/: README.md  fig7_topo.config  simcov.config
configs/figure-8/: FOI-1.1.config  FOI-1.3.config  FOI-16.0.config  FOI-16.1.config  FOI-16.2.config  FOI-2.1.config  FOI-2.2.config  FOI-2.3.config  FOI-32.1.config  FOI-32.2.config  FOI-32.3.config  FOI-32.4.config  FOI-4.0.config  FOI-4.2.config  FOI-4.3.config  FOI-4.4.config  FOI-64.0.config  FOI-64.1.config  FOI-8.1.config  FOI-8.2.config  FOI-8.3.config  README.md  chemokine-decay-0.005.0.config  chemokine-decay-0.005.1.config  chemokine-decay-0.005.3.config  chemokine-decay-0.005.5.config  chemokine-decay-0.005.8.config  chemokine-decay-0.0075.3.config  chemokine-decay-0.0075.4.config  chemokine-decay-0.0075.7.config  chemokine-decay-0.01.2.config  chemokine-decay-0.01.3.config  chemokine-decay-0.01.5.config  chemokine-decay-0.01.6.config  chemokine-decay-0.01.7.config  chemokine-decay-0.01.8.config  chemokine-decay-0.015.4.config  chemokine-decay-0.02.3.config  chemokine-decay-0.02.6.config  chemokine-decay-0.02.7.config  (+207 more)
experiments/: j-0.0007632_m-0.007632.config  j-0.0007632_m-0.007632_s-0.config  j-0.0007632_m-0.0717.config  j-0.0007632_m-0.763.config  j-0.0007632_m-1.config  j-0.002049_m-0.007632.config  j-0.002049_m-0.0717.config  j-0.002049_m-0.763.config  j-0.002049_m-1.config  j-0.004783_m-0.007632.config  j-0.004783_m-0.0717.config  j-0.004783_m-0.763.config  j-0.004783_m-1.config  j-0.15_m-0.007632.config  j-0.15_m-0.0717.config  j-0.15_m-0.763.config  j-0.15_m-1.config  j-1_m-0.007632.config  j-1_m-0.0717.config  j-1_m-0.763.config  j-1_m-1.config
experiments/j-0.0007632_m-0.007632/: simcov.config  simcov.stats
experiments/j-0.0007632_m-0.0717/: simcov.config  simcov.stats
experiments/j-0.0007632_m-0.763/: simcov.config  simcov.stats
experiments/j-0.0007632_m-1/: simcov.config  simcov.stats
experiments/j-0.002049_m-0.007632/: simcov.config  simcov.stats
experiments/j-0.002049_m-0.0717/: simcov.config  simcov.stats
experiments/j-0.002049_m-0.763/: simcov.config  simcov.stats
experiments/j-0.002049_m-1/: simcov.config  simcov.stats
experiments/j-0.004783_m-0.007632/: simcov.config  simcov.stats
experiments/j-0.004783_m-0.0717/: simcov.config  simcov.stats
experiments/j-0.004783_m-0.763/: simcov.config  simcov.stats
experiments/j-0.004783_m-1/: simcov.config  simcov.stats
experiments/j-0.15_m-0.007632/: simcov.config  simcov.stats
experiments/j-0.15_m-0.0717/: simcov.config  simcov.stats
experiments/j-0.15_m-0.763/: simcov.config  simcov.stats
experiments/j-0.15_m-1/: simcov.config  simcov.stats
experiments/j-1_m-0.007632/: simcov.config  simcov.stats
experiments/j-1_m-0.0717/: simcov.config  simcov.stats
experiments/j-1_m-0.763/: simcov.config  simcov.stats
include/: CLI11.hpp  dht_graph.hpp  lung.hpp  options.hpp  simcov.hpp  simstats.hpp  tissue.hpp  utils.hpp  version.h
lungmodel/: .gitignore  CMakeDefinitions.txt  CMakeLists.txt  README.md  build.sh  table.txt
lungmodel/include/: lung.hpp
lungmodel/src/: CMakeLists.txt  main.cpp
scripts/: dynamic_plot.py  dynamic_plot_all.py  figure-10-T-cell-gen-delay-comparison.py  generate_paraview_state.py  ode-tcl-model.py  plot_concentrations.py  plot_interferon_comparison.py  plot_state.py  plot_state_2.py  small_test_state.py  virion_plot.py
simcovcuda/: README.md  makefile
src/: CMakeLists.txt  main.cpp  simstats.cpp  tissue.cpp  utils.cpp
(+58 files in other folders)
